# hubris

./: Cargo.toml  FAQ.mkdn  rust-toolchain.toml
app/demo-stm32g0-nucleo/: Cargo.toml
app/demo-stm32g0-nucleo/src/: main.rs
app/sparkfun-redv/: Cargo.toml  app.toml  openocd.gdb
app/sparkfun-redv/src/: main.rs
doc/: interrupts.adoc  startup.adoc  syscalls.adoc
drv/stm32g0-gpio/: Cargo.toml
drv/stm32g0-rcc/: Cargo.toml
drv/stm32g0-usart/: Cargo.toml
sys/kern/: Cargo.toml
sys/kern/src/: lib.rs  startup.rs
sys/kern/src/arch/: arm_m.rs
sys/userlib/: Cargo.toml
sys/userlib/src/: lib.rs  macros.rs  util.rs
task/hiffy/: Cargo.toml
task/idle/: Cargo.toml
task/idle/src/: main.rs
task/jefe/: Cargo.toml
task/ping/: Cargo.toml
task/ping/src/: main.rs
task/pong/: Cargo.toml
task/pong/src/: main.rs
test/test-assist/: Cargo.toml
test/test-assist/src/: main.rs
test/test-runner/: Cargo.toml
test/test-runner/src/: main.rs
test/test-suite/: Cargo.toml
test/test-suite/src/: main.rs
test/tests-sparkfun-redv/: Cargo.toml  app.toml
