[package]
name = "kern"
version = "0.1.0"
edition = "2018"

[features]
default = ["klog-itm"]
klog-semihosting = ["cortex-m-semihosting"]
klog-semihosting-riscv = ["riscv-semihosting"]
klog-itm = []

[dependencies]
abi = {path = "../abi"}
zerocopy = "0.6.1"
byteorder = { version = "1.3.4", default-features = false }
bitflags = "1.2.1"
cfg-if = "0.1.10"
serde = { version = "1.0.114", default-features = false }
ssmarshal = { version = "1.0.0", default-features = false }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-semihosting = { version = "0.3.5", optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { version = "0.7", features = ["inline-asm"] }
riscv-rt = { version = "0.8.0", features = ["inline-asm"] }
riscv-semihosting = { git = "https://github.com/jperkin/riscv-semihosting", branch = "master", optional = true }

[build-dependencies]
build-util = {path = "../../build/util"}

[lib]
test = false
bench = false
