[package]
name = "task-jefe"
version = "0.1.0"
edition = "2018"

[features]
itm = [ "userlib/log-itm" ]
semihosting = [ "cortex-m-semihosting", "userlib/log-semihosting" ]
semihosting-riscv = [ "riscv-semihosting", "userlib/log-semihosting" ]

[dependencies]
abi = {path = "../../sys/abi"}
userlib = {path = "../../sys/userlib"}
hubris-num-tasks = {path = "../../sys/num-tasks"}
ringbuf = {path = "../../lib/ringbuf" }
num-traits = { version = "0.2.12", default-features = false }
zerocopy = "0.6.1"

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-semihosting = { version = "0.3.5", optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { version = "0.7", features = ["inline-asm", "user-mode"] }
riscv-semihosting = { git = "https://github.com/jperkin/riscv-semihosting", branch = "master", optional = true }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-jefe"
test = false
bench = false
