[package]
name = "test-runner"
version = "0.1.0"
edition = "2018"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
hubris-num-tasks = {path = "../../sys/num-tasks"}
test-api = {path = "../test-api"}
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { version = "0.7", features = ["inline-asm"] }
riscv-semihosting = { git = "https://github.com/jperkin/riscv-semihosting", branch = "master", optional = true }

[features]
itm = [ "userlib/log-itm" ]
semihosting = [ "userlib/log-semihosting" ]

[[bin]]
name = "test-runner"
test = false
bench = false
