[package]
name = "test-suite"
version = "0.1.0"
edition = "2018"

[dependencies]
zerocopy = "0.6.1"
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
hubris-num-tasks = {path = "../../sys/num-tasks"}
num-traits = { version = "0.2.12", default-features = false }
test-api = {path = "../test-api"}
hypocalls = {path = "../../lib/hypocalls", default-features = false, optional = true }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { version = "0.7", features = ["inline-asm", "user-mode"] }
riscv-semihosting = { git = "https://github.com/jperkin/riscv-semihosting", branch = "master" }

[features]
itm = [ "userlib/log-itm" ]
lpc55 = ["hypocalls"]
semihosting = [ "userlib/log-semihosting" ]

[[bin]]
name = "test-suite"
test = false
bench = false
